# ally

./: .gitignore  .pre-commit-config.yaml  CHATGPT_AUDIT_READY.md  CHATGPT_VERIFICATION_GUIDE.md  CONTRIBUTING.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  ORCHESTRATOR_DEBUG_GUIDE.md  PROOF_BLOCK.txt  README.md  SECURITY.md  ally_ops_cli.py  create_snapshot.py  cross_phase_integrity.sql  demo_alpha_vantage_live.py  generate_fixture_manifest.py  generate_verification_proofs.py  github_verification_comment.md  mpromotion_proofs.txt  mpromotion_proofs_hardened.txt  protection.json  pyproject.toml  pytest.ini  qc_universe.json  requirements-tests.txt  requirements.txt  sample_signals.yaml  temp_proof_block.txt  test_data_features.py  test_detect.py  test_exec_cli.py  test_exec_cli_simple.py  test_orchestrator_fixes.py  test_receipts.py  test_simple.py  test_web_tools.py  verification_report.json  verify_phase8_integrity.py  verify_receipts.py  verify_receipts_audit.py
.claude/: prompt.md
.github/: pull_request_template.md
ally/: .env.example  .gitignore  LICENSE  README.md  ally_config.json  cli.py  main.py  requirements.txt  setup.cmd  setup.sh
ally.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
artifacts/: audit_check.json  audit_check_phase11.json  audit_check_phase12.json  branch_protection_verification.md  m11_proofs.json  m8_proofs.json  mdebug_proofs.json  mqc_autorepair.json  mqc_proofs.json  mreceipts_proofs.json  mreliability_proofs.json  phase10_proof_manifest.txt  phase_badges.json  proof_receipts.duckdb  receipts.jsonl  receipts_proofs.txt  repro_memory_log_run_1337_1757716554.py  repro_memory_log_run_1337_1757716645.py  repro_memory_log_run_9999_1757716693.py
data/: mcp.sqlite
docs/: CLAIMS.md
factorlens-proof-bundle/: mfactorlens_proofs.json
scripts/: ci_phase12_chat.sh  (+32 more)
(+483 files in other folders)
